package no.ntnu.tdt4240.project;

public class AppProperties {
    public static final int WIDTH = 360;
    public static final int HEIGHT = 640;
    public static final String TITLE = "Space Armada";
}
