@startuml
set separator none

skinparam linetype polyline
skinparam linetype ortho

left to right direction

package no.ntnu.tdt4240.project {
    class AppProperties
    class Assets
    class GameInputProcessor
    class Main

    package config {
        package bullet {
        }
    }

    package data {
    }

    package engine {
        package component {
        }
        package entity {
        }
        package system {
        }
    }

    package event {
    }

    package model {
    }

    package powerup.strategy {
    }

    package sabotage.strategy {
    }

    package service {
    }

    package state {
        package tutorial {
        }
    }

    package ui {
        package view {
        }
    }

    package util {
    }
}

package com.badlogic {
    package gdx {
        package scenes.scene2d.ui {
        }
    }
    package ashley {
        package core {
        }
        package systems {
        }
    }
}

' AppProperties
AppProperties <-- config
AppProperties <-- system
AppProperties <-- tutorial
AppProperties <-- view

' Assets
Assets <-- Main
Assets <-- state
Assets <-- system

' GameInputProcessor
GameInputProcessor <-- system
GameInputProcessor <-- state
GameInputProcessor <-- tutorial

' config
config <-- state
config <-- system

' config.bullet
bullet <-- system

' data
data <-- entity
data <-- service
data <-- config
data <-- bullet
data <-- system

' engine.entity
entity <-- system
entity <-- state

' engine.component
component <-- entity

' event
event <-- state
event <-- system

' model
model <-- state
model <-- data
model <-- service

' powerup.strategy
powerup.strategy <-- state

' sabotage.strategy
sabotage.strategy <-- state

' service
service <-- Main
service <-- system
service <-- state
service <-- ui

' state
state <-- Main

' ui
ui <-- Main
ui <-- state

' util
util <-- Main
util <-- service
util <-- state
util <-- ui
util <-- view

' gdx
gdx <-- GameInputProcessor
gdx <-- Main

' gdx.scenes.scene2d.ui
scenes.scene2d.ui <-- ui

' gdx.ashley.core
core <-- engine

' gdx.ashley.systems
systems <-- system

@enduml
